2010-09-14  Mark Rowe  <mrowe@apple.com>

        Reviewed by John Sullivan.

        Part of <rdar://problem/8420003>.  Make it possible to override the version number used in linked-in-or-after checks.

        * Misc/WebKitVersionChecks.h: Remove two unused functions from the header and add a method to set the overriden version.
        * Misc/WebKitVersionChecks.m:
        (WebKitLinkedOnOrAfter):
        (setWebKitLinkTimeVersion): Set the overridden version.
        (WebKitLinkTimeVersion): Return the overridden version if set, otherwise do the old thing.
        * WebView/WebPreferences.mm:
        (+[WebPreferences setWebKitLinkTimeVersion:]): Call through to set the overridden version.
        * WebView/WebPreferencesPrivate.h:

2010-09-14  Eric Seidel  <eric@webkit.org>

        Unreviewed, reverting changes r67451 and r67451.
        Broke lots of builders.

        Only intercept ESC key press when autocorrection UI is visible.
        https://bugs.webkit.org/show_bug.cgi?id=45071

        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::WebEditorClient):
        (WebEditorClient::dismissCorrectionPanel):

2010-09-14  Jia Pu  <jpu@apple.com>

        Reviewed by Dan Bernstein.

        Only intercept ESC key press when autocorrection UI is visible.
        https://bugs.webkit.org/show_bug.cgi?id=45071

        * WebCoreSupport/WebEditorClient.h: Added declaration of isShowingCorrectionPanel(),
          which provides an inteface to query whether autocorrection panel is shown.

        * WebCoreSupport/WebEditorClient.mm:
        (WebEditorClient::WebEditorClient): Defined a constant, InvalidCorrectionPanelTag,
          for invalid correction panel tag. Replaced -1 with this constant.
        (WebEditorClient::dismissCorrectionPanel): Ditto
        (WebEditorClient::isShowingCorrectionPanel): Query whether autocorrection panel is shown.

2010-09-13  Darin Adler  <darin@apple.com>
